Fix URL concatenation for BankAccountService endpoints